--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">mobile</string>
+    <string name="app_name">Lezgo</string>
+    <string name="facebook_app_id">2343310582599597</string>
 </resources>
